# template-agent-con

./: .env.example  .pre-commit-config.yaml  AGENTS.md  Makefile  QUICKSTART_WELLNESS.md  README.md  WELLNESS_BOT.md  ddg_results.json  ddg_results.txt  demo.py  ingest.py  ingest_script.py  pyproject.toml  report.md  retail_results.json  retail_results2.json  retail_results3.json  search.py  search2.py  search3.py  search_results.json  search_results_2.json  search_retail.py  search_retail2.py  search_retail3.py  search_test.py  search_union.py  subagents.yaml  union_results.json  user_data.json
.chroma_journalism/: chroma.sqlite3
results/: eval_100.jsonl
scripts/: __init__.py
scripts/batch_journalism_eval/: README.md  manifest_100.json  run_batch.py
scripts/story_dispatch/: README.md  __init__.py  __main__.py  engine.py  http_client.py  pipeline.py  pools.py  types.py
template_agent/: search_ev_claims.py
template_agent/agent_config/: AGENTS.md  pyproject.toml  subagents.yaml  system-prompt.md
template_agent/agent_config/agents/: bmi-analyst.md  editor.md  email-dispatcher.md  fact-checker.md  newsletter-publisher.md  report-dispatcher.md  reporter.md  wellness-analyst.md
template_agent/agent_config/skills/article-writing/: SKILL.md
template_agent/agent_config/skills/bmi-report/: SKILL.md
template_agent/agent_config/skills/client-intake/: SKILL.md
template_agent/agent_config/skills/email-formatter/: SKILL.md  TEMPLATE.html
template_agent/agent_config/skills/fact-check-score/: SKILL.md  output.md
template_agent/agent_config/skills/main/client-intake/: SKILL.md
template_agent/agent_config/skills/research/: SKILL.md
template_agent/agent_config/skills/system/: SKILL.md
template_agent/agent_config/skills/wellness-report/: SKILL.md
template_agent/src/: api.py  main.py
template_agent/src/core/: agent.py  backend.py  manager.py  prompt.py  storage.py
template_agent/src/core/config/: AGENTS.md  subagents.yaml
template_agent/src/core/config/skills/main/client-intake/: SKILL.md
template_agent/src/core/config/skills/main/wellness-triage/: SKILL.md
template_agent/src/core/config/skills/report-dispatcher/email-formatter/: SKILL.md
template_agent/src/core/config/skills/wellness-analyst/wellness-report/: SKILL.md
template_agent/src/core/config/skills/wellness-report/: SKILL.md
template_agent/src/routes/: stream.py
template_agent/utils/: pylogger.py
tests/: test_batch_journalism_eval.py  test_database_init.py  test_exceptions.py  test_feedback.py  test_health.py  test_prompt.py  test_settings.py  test_story_dispatch.py
